# swg_bmvc2025_official

./: .gitignore  README.md
edm2/: .gitignore  README.md  calculate_metrics.py  pyproject.toml  run_DiT_cfg_SWG.ipynb  sample_dit.py  sample_edm2.py
edm2/bash/: dit_cfg_swg.sh  dit_swg.sh  edm2_cfg_swg.sh  edm2_swg.sh  edm2_wmg_swg.sh  gpu_utils.sh
edm2/diffusion/: models.py
edm2/dnnlib/: __init__.py  slurm_utils.py  util.py
edm2/torch_utils/: distributed.py
edm2/training/: dataset.py  encoders.py  training_loop.py
toy_example/: toy_model.ipynb
